--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -4,8 +4,6 @@ imports:
     - { resource: mapbender.yml }
 
 framework:
-    #esi:             ~
-    #translator:      { fallback: %locale% }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -31,14 +29,9 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
-    #java: /usr/bin/java
+    #bundles:        [ ]
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
-        #yui_css:
-        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
 # Doctrine Configuration
 doctrine:
@@ -72,37 +65,19 @@ fom_manager:
 # FOM User Configuration
 fom_user:
     selfregister: true
+    reset_password: true
     max_registration_time: 1
     max_reset_time: 1
     mail_from_address: wizard@oz.net
     mail_from_name: Wizard of Oz
+    profile_entity: FOM\UserBundle\Entity\BasicProfile
+    profile_formtype: FOM\UserBundle\Form\Type\BasicProfileType
+    profile_template: FOMUserBundle:User:basic_profile.html.twig
     
 # OWSProxy Configuration    
 ows_proxy3_core:
     logging: true
     obfuscate_client_ip: true
     
-#    proxy:
-#        host: localhost
-#        port: 8888
-#        user: user
-#        password: password
-#        noproxy:
-#            - host_a
-#            - host_b
-
 # Mapbender Configuration
 mapbender_core: ~
-#mapbender_core:
-#    proxy:
-#        host: proxy
-#        port: 8000
-#        user: paul
-#        password: paul
-#        noproxy:
-#            - arcgis.lpz.web
-#            - arcgis.ffm.web
-#            - geoportal.ffm.web
-#            - geoportal.lpz.web
-#            - ims.geoportal.de
-
