--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -4,6 +4,8 @@ imports:
     - { resource: mapbender.yml }
 
 framework:
+    #esi:             ~
+    translator:      { fallback: %locale% }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -23,15 +25,20 @@ twig:
         fom:    %fom%
     form:
         resources:
-            - 'FOMCoreBundle:Form:fields.html.twig'
+            - 'FOMCoreBundle:Form:fields.html.twig' 
 
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    #bundles:        [ ]
+    bundles:        [ ]
+    #java: /usr/bin/java
     filters:
         cssrewrite: ~
+        #closure:
+        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
+        #yui_css:
+        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
 # Doctrine Configuration
 doctrine:
@@ -57,6 +64,12 @@ swiftmailer:
     password:  %mailer_password%
     spool:     { type: memory }
 
+# Mopa Bootstrap
+mopa_bootstrap:
+    form:
+        show_legend: false # default is true
+        show_child_legend: false # default is true
+        error_type: block # or inline which is default
 
 # FOM Manager Configuration
 fom_manager:
@@ -73,11 +86,21 @@ fom_user:
     profile_entity: FOM\UserBundle\Entity\BasicProfile
     profile_formtype: FOM\UserBundle\Form\Type\BasicProfileType
     profile_template: FOMUserBundle:User:basic_profile.html.twig
-    
-# OWSProxy Configuration    
+
+# OWSProxy Configuration
 ows_proxy3_core:
     logging: true
     obfuscate_client_ip: true
-    
+    proxy:
+#        host: localhost
+#        port: 8888
+        connecttimeout: 60
+        timeout: 90
+#        user: user
+#        password: password
+#        noproxy:
+#            - host_a
+#            - host_b 
+
 # Mapbender Configuration
 mapbender_core: ~
