--- a/application/composer.json
+++ b/application/composer.json
@@ -21,7 +21,8 @@
 
         "friendsofsymfony/jsrouting-bundle": "dev-master",
         "kriswallsmith/buzz": "dev-master",
-        "doctrine/doctrine-fixtures-bundle": "dev-master"
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "toooni/fpdf": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
