Fix #13 - FeatureInfo can not be activated

--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -72,7 +72,8 @@ parameters:
                         label: true
                         target: featureinfo
                         action: activate
-                        #deactivate: deactivate
+                        deactivate: deactivate
+                        group: featureinfo
                     print-button:
                         title: Print
                         tooltip: Print PDF
